fixed buttons container changing width on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,10 @@ footer {
         height: max-content;
     }
 
+    .buttons {
+        width: min(100%, 250px);
+    }
+
     .buttons button {
         width: 100px;
         height: 54px;
